<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackground"
    tools:context=".Account">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/socialMediaBar"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/scrollViewAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/signin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="50dp"
                    android:fontFamily="@font/soupofjustice"
                    android:gravity="center"
                    android:text="@string/textview_sign_in_text"
                    android:textColor="#FFFFFF"
                    android:textSize="35sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/signin"
                    android:layout_margin="10dp"
                    android:background="#30FFFFFF"
                    android:drawableStart="@drawable/ic_baseline_person_outline_24"
                    android:drawablePadding="20dp"
                    android:fontFamily="@font/soupofjustice"
                    android:hint="@string/edittext_username_hint"
                    android:padding="20dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/username"
                    android:layout_margin="10dp"
                    android:background="#30FFFFFF"
                    android:drawableStart="@drawable/ic_baseline_security_24"
                    android:drawablePadding="20dp"
                    android:fontFamily="@font/soupofjustice"
                    android:hint="@string/edittext_password_hint"
                    android:inputType="textPassword"
                    android:padding="20dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/password"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="20dp"
                    android:fontFamily="@font/soupofjustice"
                    android:text="@string/button_login_text"
                    app:backgroundTint="#0099CC" />

                <Button
                    android:id="@+id/forgotpwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/loginbtn"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/soupofjustice"
                    android:text="@string/button_forgot_password_text"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/signUpButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/username"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="70dp"
                    android:layout_marginEnd="0dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/soupofjustice"
                    android:text="@string/button_sign_up_text"
                    android:textColor="#FFFFFF" />

            </RelativeLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>