<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/tictactoebackground2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/scrollViewAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="50dp"
                    android:fontFamily="@font/soupofjustice"
                    android:gravity="center"
                    android:text="@string/textview_sign_up_text"
                    android:textColor="#FFFFFF"
                    android:textSize="35sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/signup"
                    android:layout_margin="10dp"
                    android:background="#30FFFFFF"
                    android:drawableStart="@drawable/ic_baseline_person_outline_24"
                    android:drawablePadding="20dp"
                    android:fontFamily="@font/soupofjustice"
                    android:hint="@string/edittext_username_hint"
                    android:padding="20dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/username"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="#30FFFFFF"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="20dp"
                    android:fontFamily="@font/soupofjustice"
                    android:hint="@string/edittext_email_hint"
                    android:padding="20dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/email"
                    android:layout_margin="10dp"
                    android:background="#30FFFFFF"
                    android:drawableStart="@drawable/ic_baseline_security_24"
                    android:drawablePadding="20dp"
                    android:fontFamily="@font/soupofjustice"
                    android:hint="@string/edittext_password_hint"
                    android:inputType="textPassword"
                    android:padding="20dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF" />

                <EditText
                    android:id="@+id/repeatPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/password"
                    android:layout_margin="10dp"
                    android:background="#30FFFFFF"
                    android:drawableStart="@drawable/ic_baseline_security_24"
                    android:drawablePadding="20dp"
                    android:fontFamily="@font/soupofjustice"
                    android:hint="@string/edittext_repeat_password_hint"
                    android:inputType="textPassword"
                    android:padding="20dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF" />

                <EditText
                    android:id="@+id/recoveryQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/repeatPassword"
                    android:layout_margin="10dp"
                    android:background="#30FFFFFF"
                    android:drawableStart="@drawable/ic_baseline_question_answer_24"
                    android:drawablePadding="20dp"
                    android:fontFamily="@font/soupofjustice"
                    android:hint="@string/edittext_recovery_question_hint"
                    android:padding="20dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/registerbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/recoveryQuestion"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="30dp"
                    android:fontFamily="@font/soupofjustice"
                    android:text="@string/button_register_text"
                    app:backgroundTint="#0099CC" />

                <Button
                    android:id="@+id/singInInstead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/repeatPassword"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="70dp"
                    android:layout_marginEnd="0dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/soupofjustice"
                    android:text="@string/button_log_in_instead_text"
                    android:textColor="#FFFFFF" />

            </RelativeLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>