<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackground"
    tools:context=".AccountRecovery">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/scrollViewAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/pwdRecovery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="50dp"
                    android:fontFamily="@font/soupofjustice"
                    android:gravity="center"
                    android:text="@string/textview_password_recovery_text"
                    android:textColor="#FFFFFF"
                    android:textSize="35sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/pwdRecovery"
                    android:layout_margin="10dp"
                    android:background="#30FFFFFF"
                    android:drawableStart="@drawable/ic_baseline_person_outline_24"
                    android:drawablePadding="20dp"
                    android:fontFamily="@font/soupofjustice"
                    android:hint="@string/edittext_username_hint"
                    android:padding="20dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/username"
                    android:layout_margin="10dp"
                    android:background="#30FFFFFF"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="20dp"
                    android:fontFamily="@font/soupofjustice"
                    android:hint="@string/edittext_email_hint"
                    android:padding="20dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF" />

                <EditText
                    android:id="@+id/recoveryQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/email"
                    android:layout_margin="10dp"
                    android:background="#30FFFFFF"
                    android:drawableStart="@drawable/ic_baseline_question_answer_24"
                    android:drawablePadding="20dp"
                    android:fontFamily="@font/soupofjustice"
                    android:hint="@string/edittext_recovery_question_hint"
                    android:padding="20dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/submitbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/recoveryQuestion"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="30dp"
                    android:fontFamily="@font/soupofjustice"
                    android:text="@string/button_submit_text"
                    app:backgroundTint="#0099CC" />

            </RelativeLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>