<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPassword">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/tictactoebackground2small"
        android:contentDescription="@string/a_funny_background"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/resetPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="50dp"
                android:fontFamily="@font/soupofjustice"
                android:gravity="center"
                android:text="@string/textview_reset_pass_text"
                android:textColor="#FFFFFF"
                android:textSize="35sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/resetPass"
                android:layout_margin="10dp"
                android:background="#30FFFFFF"
                android:drawableStart="@drawable/ic_baseline_security_24"
                android:drawablePadding="20dp"
                android:fontFamily="@font/soupofjustice"
                android:hint="@string/edittext_password_hint"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <EditText
                android:id="@+id/repeatPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:layout_margin="10dp"
                android:background="#30FFFFFF"
                android:drawableStart="@drawable/ic_baseline_security_24"
                android:drawablePadding="20dp"
                android:fontFamily="@font/soupofjustice"
                android:hint="@string/edittext_repeat_password_hint"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/resetPassButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/repeatPassword"
                android:layout_centerHorizontal="true"
                android:layout_margin="30dp"
                android:fontFamily="@font/soupofjustice"
                android:text="@string/button_reset_password_text"
                app:backgroundTint="#0099CC" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>